# windows-10-mobile-lvgl

./: .gitignore  README.md  ffat_8M.csv  platformio.ini
hal/esp32/: app_hal.cpp  app_hal.h
hal/esp32/core/: MemoryStream.h  app_manager.cpp  app_manager.h  requests.cpp  requests.h  wifi.cpp
hal/esp32/displays/: LGFX_ELECROW_3_5.hpp  LGFX_WT32SC01_PLUS.hpp
hal/sdl2/: app_hal.cpp  prefs.c  prefs.h
lib/: lv_conf.h
squareline/: W10M.sll  W10M.spj
src/: main.cpp
src/ui/: CMakeLists.txt  filelist.txt  stars.h  ui.c  ui.h  ui_common.c  ui_common.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/images/: convert.py  ui_img_airplane_ic_png.c  ui_img_battery_ic_png.c  ui_img_bluetooth_ic_png.c  ui_img_brightness_ic_png.c  ui_img_camera_ic_png.c  ui_img_cellular_ic_png.c  ui_img_edge_ic_png.c  ui_img_embedded_tile_png.c  ui_img_file_ic_png.c  ui_img_groove_ic_png.c  ui_img_hotspot_ic_png.c  ui_img_img0_png.c  ui_img_img1_png.c  ui_img_img2_png.c  ui_img_img3_png.c  ui_img_img4_png.c  ui_img_img5_png.c  ui_img_img6_png.c  ui_img_img7_png.c  ui_img_img8_png.c  ui_img_img9_png.c  ui_img_location_ic_png.c  ui_img_message_ic_png.c  ui_img_microsoft_ic_png.c  ui_img_news_ic_png.c  ui_img_news_image_png.c  ui_img_news_tile_png.c  ui_img_outlook_ic_png.c  ui_img_padlock_png.c  ui_img_people_ic_png.c  ui_img_phone_ic_png.c  ui_img_photo_tile_png.c  ui_img_photos_ic_png.c  ui_img_settings_back_png.c  ui_img_settings_ic_png.c  ui_img_sky_bg_png.c  ui_img_stars_ic_png.c  ui_img_tips_ic_png.c  ui_img_vpn_ic_png.c  (+18 more)
src/ui/screens/: ui_appScreen.c  ui_homeScreen.c  ui_newsScreen.c  ui_settingsScreen.c  ui_starsScreen.c  ui_thermalScreen.c
support/: sdl2_build_extra.py  stars.py
test/mac_64/: program
(+6 files in other folders)
