SET(SOURCES screens/ui_homeScreen.c
    screens/ui_settingsScreen.c
    screens/ui_appScreen.c
    screens/ui_newsScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_img5_png.c
    images/ui_img_phone_ic_png.c
    images/ui_img_people_ic_png.c
    images/ui_img_outlook_ic_png.c
    images/ui_img_message_ic_png.c
    images/ui_img_wp_settings_png.c
    images/ui_img_groove_ic_png.c
    images/ui_img_tips_ic_png.c
    images/ui_img_embedded_tile_png.c
    images/ui_img_news_ic_png.c
    images/ui_img_news_tile_png.c
    images/ui_img_camera_ic_png.c
    images/ui_img_photos_ic_png.c
    images/ui_img_photo_tile_png.c
    images/ui_img_weather_ic_png.c
    images/ui_img_edge_ic_png.c
    images/ui_img_microsoft_ic_png.c
    images/ui_img_wp_next_png.c
    images/ui_img_file_ic_png.c
    images/ui_img_wp_back_png.c
    images/ui_img_windows_logo_png.c
    images/ui_img_wp_search_png.c
    images/ui_img_img2_png.c
    images/ui_img_airplane_ic_png.c
    images/ui_img_cellular_ic_png.c
    images/ui_img_wifi_ic_png.c
    images/ui_img_bluetooth_ic_png.c
    images/ui_img_brightness_ic_png.c
    images/ui_img_battery_ic_png.c
    images/ui_img_hotspot_ic_png.c
    images/ui_img_settings_ic_png.c
    images/ui_img_vpn_ic_png.c
    images/ui_img_location_ic_png.c
    images/ui_img_wp_system_png.c
    images/ui_img_news_image_png.c
    images/ui_img_img0_png.c
    images/ui_img_img1_png.c
    images/ui_img_img3_png.c
    images/ui_img_img4_png.c
    images/ui_img_img6_png.c
    images/ui_img_img7_png.c
    images/ui_img_img8_png.c
    images/ui_img_img9_png.c)

add_library(ui ${SOURCES})
